ingress_setup/default-clusterIP.yaml
apiVersion: v1
kind: Service
metadata: 
  name: default-backend-service
  namespace: app-space
spec: 
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector: 
    app: default-backend
  type: ClusterIP
