ingress_setup/video-clusterIP.yaml
apiVersion: v1
kind: Service
metadata: 
  name: video-service
  namespace: app-space
spec: 
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector: 
    app: webapp-video
  type: ClusterIP
