ingress_setup/ingress-resource.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata: 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: ingress-wear-watch
  namespace: app-space
spec: 
  rules: 
  - http: 
      paths: 
      - backend: 
          service: 
            name: wear-service
            port: 
              number: 8080
        path: /wear
        pathType: Prefix
      - backend: 
          service: 
           name: video-service
           port: 
            number: 8080
        path: /watch
        pathType: Prefix
      - backend: 
          service: 
            name: food-service
            port: 
              number: 8080
        path: /eat
        pathType: Prefix
  defaultBackend:
    service: 
      name: default-backend-service
      port:   
        number: 80
